fix text align

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/pages/_post.scss
@@ -75,6 +75,7 @@
   color: white;
   padding: 3px 10px;
   font-weight: bold;
+  vertical-align: text-bottom;
 }
 
 
